<resources>
    <string name="app_name">Examen</string>
    <string name="titulo">Registro Entrada</string>
    <string name="codigo">Codigo:</string>
    <string name="desc">Descripcion:</string>
    <string name="unidad">Unidad:</string>
    <string name="venta">Precio venta:</string>
    <string name="compra">Precio compra:</string>
    <string name="cantidad">Cantidad:</string>
    <string name="btnLimpiar">Limpiar</string>
    <string name="btnSiguiente">Enviar</string>
    <string name="btnSalir">Salir</string>
    <string name="btnCalcular">Calcular</string>
    <string name="btnRegresar">Regresar</string>
</resources>