<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:textSize="35sp"
            android:textAlignment="center">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/codigo"
            android:textSize="15sp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="50dp"
            >
        </TextView>

        <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:id="@+id/txtCodigo"
            android:inputType="number">
        </EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc"
            android:textSize="15sp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="50dp"
            >
        </TextView>

        <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="15dp"
            android:id="@+id/txtDesc"
            android:inputType="text">
        </EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unidad"
            android:textSize="15sp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="50dp"
            >
        </TextView>
        <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="15dp"
            android:id="@+id/txtUnidad"
            android:inputType="text">
        </EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/venta"
            android:textSize="15sp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="50dp"
            >
        </TextView>
        <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="15dp"
            android:id="@+id/txtVenta"
            android:inputType="numberDecimal"
            android:maxLength="5">
        </EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/compra"
            android:textSize="15sp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="50dp"
            >
        </TextView>
        <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="15dp"
            android:id="@+id/txtCompra"
            android:inputType="numberDecimal"
            android:maxLength="5">
        </EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cantidad"
            android:textSize="15sp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="50dp"
            >
        </TextView>
        <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="15dp"
            android:id="@+id/txtCantidad"
            android:inputType="number">
        </EditText>

        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:id="@+id/btnLimpiar"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:text="@string/btnLimpiar">
        </Button>
        <Button
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginStart="130dp"
            android:layout_marginTop="-50dp"
            android:id="@+id/btnSiguiente"
            android:text="@string/btnSiguiente">
        </Button>
        <Button
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginStart="255dp"
            android:layout_marginTop="-50dp"
            android:id="@+id/btnSalir"
            android:text="@string/btnSalir">
        </Button>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>